tests/baselines/reference/labeledStatementWithLabel_es2015.errors.txt
labeledStatementWithLabel_es2015.ts(1,17): error TS1256: Function declarations are not allowed inside statements. Use a block statement to wrap the function declaration.
labeledStatementWithLabel_es2015.ts(2,18): error TS1256: Function declarations are not allowed inside statements. Use a block statement to wrap the function declaration.
labeledStatementWithLabel_es2015.ts(3,23): error TS1256: Function declarations are not allowed inside statements. Use a block statement to wrap the function declaration.
labeledStatementWithLabel_es2015.ts(11,8): error TS1235: A namespace declaration is only allowed at the top level of a namespace or module.
labeledStatementWithLabel_es2015.ts(12,8): error TS1235: A namespace declaration is only allowed at the top level of a namespace or module.


==== labeledStatementWithLabel_es2015.ts (5 errors) ====
    label: function fn() { }
                    ~~
!!! error TS1256: Function declarations are not allowed inside statements. Use a block statement to wrap the function declaration.
    label: function* gen() { }
                     ~~~
!!! error TS1256: Function declarations are not allowed inside statements. Use a block statement to wrap the function declaration.
    label: async function gen1() { }
                          ~~~~
!!! error TS1256: Function declarations are not allowed inside statements. Use a block statement to wrap the function declaration.
    label: enum E {}
    label: interface I {}
    label: class C { }
    label: var a = 1;
    label: let b = 1;
    label: const c = 1;
    
    label: namespace M { }
           ~~~~~~~~~
!!! error TS1235: A namespace declaration is only allowed at the top level of a namespace or module.
    label: namespace N {}
           ~~~~~~~~~
!!! error TS1235: A namespace declaration is only allowed at the top level of a namespace or module.
    label: type T = {}
    